--- a/Underfunded Schools/index.html
+++ b/Underfunded Schools/index.html
@@ -18,7 +18,7 @@
     </ul>
   </nav>
   <section>
-      <img src="pic_2.jpg"></img>
+      <img src="pic 2.jpg"></img>
     <article <p>
            In the United States there a many schools that are underfunded, which prevent kids from having a strong foundation for higher education. Public school funding in the United States comes from federal, state, and local sources, but because nearly half of those funds come from local property taxes, the system generates large funding differences between wealthy and impoverished communities.
        </p>
