--- a/school_list.html
+++ b/school_list.html
@@ -16,7 +16,7 @@
         </ul>
       </nav>
    <section>
-     <img src="school.png">
+     <img src="school.jpg">
      <h2>School List</h2>
      <ol>
             <li>
